@@ -1,3 +1,9 @@
+Wed Sep  7 01:43:43 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* Makefile.am (brk.lo,stackalloc.lo,dvsprintf.lo): Update custom
+	targets based on automake 1.11.1 so that parallel builds are
+	again reliable.
+
 Wed Sep  7 00:08:02 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* stdio/fread.c (fread): Set EOF when last byte is read.
